Update lib/dune to include bisect_ppx for instrumentation

--- a/lib/dune
+++ b/lib/dune
@@ -2,4 +2,6 @@
  (name final_project)
  (preprocess
   (pps lwt_ppx))
+ (instrumentation
+  (backend bisect_ppx))
  (libraries lwt.unix ANSITerminal))
