Implemented JSON processing to server
- Implemented JSON raw data body extraction in json compilation unit
- Instead of only looking at header, server now handles non-empty body
  contents

--- a/lib/dune
+++ b/lib/dune
@@ -4,4 +4,4 @@
   (pps lwt_ppx))
  (instrumentation
   (backend bisect_ppx))
- (libraries lwt.unix ANSITerminal batteries))
+ (libraries lwt.unix ANSITerminal batteries yojson))
