--- a/test/dune
+++ b/test/dune
@@ -1,7 +1,11 @@
-(test 
-(name router_test)
-(libraries ounit2 final_project))
+(test
+ (name router_test)
+ (libraries ounit2 final_project))
 
-(test 
-(name server_test)
-(libraries ounit2 final_project))
+(test
+ (name server_test)
+ (libraries ounit2 final_project))
+
+(test
+ (name query_params_test)
+ (libraries ounit2 final_project))
