Implemented database (only name and netid)
 - added csv_database.ml and csv_database.mli
 - added routes in main.ml to test adding, deleting, and querying from database

- added database_test.ml to test csv_database.ml

--- a/test/dune
+++ b/test/dune
@@ -1,7 +1,11 @@
-(test 
-(name router_test)
-(libraries ounit2 final_project))
+(test
+ (name router_test)
+ (libraries ounit2 final_project))
 
-(test 
-(name server_test)
-(libraries ounit2 final_project))
+(test
+ (name database_test)
+ (libraries ounit2 final_project unix))
+
+(test
+ (name server_test)
+ (libraries ounit2 final_project))
